# DH2323-Computer-Graphics

./: .gitignore  CMakeLists.txt  README.md  Source.cpp  text.txt
CgLab1/: skeleton.cpp
Lab1/: CMakeLists.txt  main.cpp  skeleton.cpp
Lab2/: CMakeLists.txt  Source.cpp  main.cpp
Lab3/: main.cpp
libraries/: SDL_helper.h
libraries/test/: test.h
tests/: interpolation.cpp
